<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        tools:src="@android:color/darker_gray"/>

    <Button
        android:id="@+id/btn_detail_profile"
        android:layout_width="86dp"
        android:layout_height="30dp"
        android:background="@color/btn_profile"
        android:textColor="@color/white"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:text="@string/detail_profile"
        android:textSize="9sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/img_item_photo"
        android:layout_toRightOf="@+id/img_item_photo"
        android:orientation="vertical">
        
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>
                <TextView
                    android:id="@+id/tv_item_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/users_name"/>

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="10dp"
                    tools:text="@string/name"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/tv_item_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_marginBottom="5dp"
            android:maxLines="2"
            tools:text="@string/location"/>

        <TextView
            android:id="@+id/tv_item_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_marginBottom="8dp"
            android:maxLines="2"
            tools:text="@string/company"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>
                <ImageView
                    android:id="@+id/img_followers_photo"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/followers"/>

                <TextView
                    android:id="@+id/tv_followers_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="10sp"
                    tools:text="@string/followers" />

                <ImageView
                    android:id="@+id/img_following_photo"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/following"/>

                <TextView
                    android:id="@+id/tv_following_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="10sp"
                    tools:text="@string/following" />

                <ImageView
                    android:id="@+id/img_repo_photo"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/repository"/>

                <TextView
                    android:id="@+id/tv_repo_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="10sp"
                    tools:text="@string/repo" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</RelativeLayout>